# aoc

./: CMakeLists.txt  LICENSE  README.md
include/: active.h  blocking_queue.h  boolean.h  condition.h  config.h  config.h.in  mutex.h  queue.h  thread.h
src/: active.c  blocking_queue.c  condition.c  mutex.c  queue.c  thread.c
tests/: condition_test.c  integration_test.c  mutex_test.c  queue_test.c  tests.c  tests.h  thread_test.c
